--- a/index.html
+++ b/index.html
@@ -39,7 +39,41 @@
             </div>
           </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="container">
+        <div>
+          <h4 class="text-primary my-4">
+            Top Players
+          </h4>
+          <div class="row gy-3">
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-1.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-2.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-3.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-4.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-5.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+              <img src="images/players/player-6.png" alt="" width="56">
+              <h4 class="ms-3">John Smith</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
         
     </footer>
