--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LeaderBoard by Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: #E5E5E5;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #562EFF;">
             <div class="container">
@@ -40,12 +40,12 @@
           </nav>
     </header>
     <main>
-      <section class="container">
+      <section class="container bg-white rounded">
         <div>
-          <h4 class="text-primary my-4">
+          <h4 class="text-primary my-4 pt-5">
             Top Players
           </h4>
-          <div class="row gy-3">
+          <div class="row gy-3 pb-5">
             <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
               <img src="images/players/player-1.png" alt="" width="56">
               <h4 class="ms-3">John Smith</h4>
@@ -69,6 +69,28 @@
             <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
               <img src="images/players/player-6.png" alt="" width="56">
               <h4 class="ms-3">John Smith</h4>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div>
+          <h4 class="text-primary my-4 py-2">
+            Top Blogs
+          </h4>
+          <div class="row gy-3">
+            <div class="col-md-12 col-lg-6 d-flex">
+              <img src="images/blogs/blog-1.png" alt="" width="177">
+              <div class="ps-3">
+                <h4>13 of My Favorite UI/UX Goodies</h4>
+                <p>by <a href="">Dany Sapio</a></p>
+              </div>
+            </div>
+            <div class="col-md-12 col-lg-6 d-flex">
+              <img src="images/blogs/blog-2.png" alt="" width="177">
+              <div class="ps-3">
+                <h4>UI cheat sheet: list vs grids</h4>
+                <p>by <a href="">Dany Sapio</a></p>
+              </div>
             </div>
           </div>
         </div>
